crates/flir-core/src/lints/repeat/snapshots/flir_core__lints__repeat__tests__no_fix_with_comments.snap
---
source: crates/flir-core/src/lints/repeat/mod.rs
expression: "get_fixed_text(vec![\"while (\\n#a comment\\nTRUE) { }\\n\",], \"any_is_na\", None)"
---
OLD:
====
while (
#a comment
TRUE) { }

NEW:
====
while (
#a comment
TRUE) { }
